--- a/net-mgmt/collectd5/Makefile
+++ b/net-mgmt/collectd5/Makefile
@@ -17,7 +17,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 LIB_DEPENDS=   libpfctl.so:net/libpfctl
 LDFLAGS+=      -lpfctl
 
-USES=		autoreconf cpe gmake libtool pkgconfig shebangfix tar:bzip2
+USES=		autoreconf cpe gmake libtool localbase:ldflags pkgconfig shebangfix tar:bzip2
 
 GNU_CONFIGURE=	yes
 
