--- a/lang/rust/Makefile
+++ b/lang/rust/Makefile
@@ -26,7 +26,8 @@ ONLY_FOR_ARCHS?=	aarch64 amd64 armv7 i386 powerpc64 powerpc64le powerpc \
 			riscv64
 ONLY_FOR_ARCHS_REASON?=	requires prebuilt bootstrap compiler
 
-BUILD_DEPENDS=	cmake:devel/cmake-core
+BUILD_DEPENDS=	gcc12>0:lang/gcc12\
+		cmake:devel/cmake-core
 LIB_DEPENDS=	libcurl.so:ftp/curl
 
 USES=		cpe ninja:build pkgconfig python:build ssl tar:xz
